<resources>
    <string name="app_name">Physics</string>

    <string name="Planet">Planet</string>
    <string name="Swipe_left">Swipe left</string>
    <string name="Swipe_right">Swipe right</string>

    <string name="Initial_velocity">Initial velocity</string>
    <string name="v">%1$d m/s</string>

    <string name="Angle">Angle</string>
    <string name="a" translatable="false">%1$d°</string>

    <string name="Gravity">Gravity</string>
    <string name="g">%1$s %2$.2fm/s&#178;</string>
    <string name="metersPerSecondPerSecond">m/s&#178;</string>

    <string name="Time">Time</string>
    <string name="t">%1$.2f s (%2$d%%)</string>

    <string name="maxHeight">Max height: %1$.2f m</string>
</resources>