<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <io.github.nearchos.physics.ProjectileMotionView
        android:id="@+id/ballisticsView"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Initial_velocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/initialVelocityValue"
            android:text="@string/v"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:id="@+id/seekBarInitialVelocity"
            android:layout_below="@id/initialVelocityValue"
            android:layout_marginTop="4dp"
            android:max="100"
            android:progress="40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Angle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/angleValue"
            android:text="@string/a"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:id="@+id/seekBarAngle"
            android:layout_below="@id/angleValue"
            android:layout_marginTop="4dp"
            android:max="90"
            android:progress="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/gravityValue"
            android:text="@string/g"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:id="@+id/seekBarGravity"
            android:layout_below="@id/gravityValue"
            android:layout_marginTop="4dp"
            android:progress="2"
            android:max="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/timeValue"
            android:text="@string/t"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:id="@+id/seekBarTime"
            android:layout_below="@id/timeValue"
            android:layout_marginTop="4dp"
            android:max="100"
            android:progress="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

</LinearLayout>